test_regress/t/t_interface_generic_modport_bad3.out
%Error: t/t_interface_generic_modport_bad3.v:18:11: Can't find definition of 'v' in dotted variable/method: 'a.v'
                                                  : ... note: In instance 't.genericModule'
   18 |     if (a.v != 7) $stop;
      |           ^
        ... Known scopes under 'a': <no instances found>
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
